added .ro handler

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2008/06/11
 		- fixed .cz handler registered date
 		- fixed .fr handler
+		- added .ro handler
 
 2008/05/28
 		- added handler for .it
