fixed bug #2991265 (.org organization not parsed)

--- a/CHANGES
+++ b/CHANGES
@@ -2,8 +2,9 @@
 		- fixed gtld handler: some registrars give no information
           on pendingdelete domains that could appear as unregistered
 		- fixed bug #2991358 (owner not correctly set for .at domains)
-		- fixed bug #2991270 (added extra incorrecta nameserver
+		- fixed bug #2991270 (added extra incorrect nameserver
           on .eu domains)
+        - fixed bug #2991265 (.org organization not parsed)
 
 2010/04/13
 		- added .ly handler
