added .jp handler

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2010/08/23
 		- improved extra whois parameters for better
           support of .jp whois
+		- added handler for .jp
 		- added handler for .co
 
 2010/08/10
