fixed .org.za handler

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2011/06/26
 		- added handler for gandi (request #3155752)
+		- fixed .org.za handler
 
 2011/06/24
 		- fixed .be handler (bug #3307363)
