--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- added handler for gandi (request #3155752)
 		- fixed .org.za handler
 		- added handler for .cl
+		- corrected utf-8 support for .hu
 
 2011/06/24
 		- fixed .be handler (bug #3307363)
