fixed .cl handler

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 		- fixed .org.za handler
 		- added handler for .cl
 		- corrected utf-8 support for .hu
+		- fixed. pl handler
 
 2011/06/24
 		- fixed .be handler (bug #3307363)
