--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,8 @@
 2011/06/26
 		- added handler for gandi (request #3155752)
-		- fixed .org.za handler
 		- added handler for .cl
 		- corrected utf-8 support for .hu, .br and ripe
-		- fixed. pl handler
+		- fixed. pl, .be, .org.za handler
 
 2011/06/24
 		- fixed .be handler (bug #3307363)
