final fix for .be

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 		- added handler for gandi (request #3155752)
 		- added handler for .cl
 		- corrected utf-8 support for .hu, .br and ripe
-		- fixed. pl, .org.za handler
+		- fixed. pl, .org.za, .be handler
 
 2011/06/24
 		- fixed .be handler (bug #3307363)
