nameservers are automatically searched if missing

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 		- added handler for .cl
 		- corrected utf-8 support for .hu, .br and ripe
 		- fixes for .pl, .org.za, .be, .cz, .de, .fj, .it handlers
+		- nameservers are automatically searched if missing
 
 2011/06/24
 		- fixed .be handler (bug #3307363)
