fix for .ch handler

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,8 @@
 		- added handler for gandi (request #3155752)
 		- added handler for .cl
 		- corrected utf-8 support for .hu, .br and ripe
-		- fixes for .pl, .org.za, .be, .cz, .de, .fj, .it handlers
+		- fixes for .pl, .org.za, .be, .cz, .de, .fj, .it, .ch
+		  handlers
 		- nameservers are automatically searched if missing
 
 2011/06/24
