fixed .ae whois server (bug #3354286)

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2011/08/07
 		- fixes for arin (bug #3339783)
 		- fixed .nl handler (bug #3314404)
+		- fixed .ae whois server (bug #3354286)
 
 2011/06/26
 		- added handler for gandi (request #3155752)
