--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- fixes for arin (bug #3339783)
 		- fixed .nl handler (bug #3314404)
 		- fixed .ae whois server (bug #3354286)
+		- fixed bug #3333558
 
 2011/06/26
 		- added handler for gandi (request #3155752)
