--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 		- fixed .ae whois server (bug #3354286)
 		- fixed bug #3333558
 		- .uk handler improvement (partial patch #3314417)
+		- added support for .gt domains (request #3353926)
 
 2011/06/26
 		- added handler for gandi (request #3155752)
